fixed input line spacing

--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body, html {
 
 h1 {
   font-size: 50px;
-  color: white;
+  color: rgba(58, 58, 122, 0.26);
   margin-bottom: 20px;
 }
 
@@ -25,6 +25,18 @@ h2 {
 
 p {
   color: white;
+}
+
+input {
+  border: none;
+  padding: 5px;
+  border-radius: 15px;
+  width: 85%;
+}
+
+button {
+  border: none;
+  border-radius: 50px;
 }
 
 /* COMPONENTS */
@@ -39,7 +51,7 @@ p {
 }
 
 main {
-  background-color: rgba(58, 58, 122, 0.397);
+  background-color: rgba(58, 58, 122, 0.26);
   border-radius: 15px;
 
   display: flex;
@@ -52,6 +64,7 @@ main {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  width: 100%;
 }
 
 .current-weather {
@@ -78,6 +91,13 @@ main {
   justify-content: center;
   align-items: center;
   width: 40%;
+  gap: 30px;
+}
+
+.advice-container p {
+  padding: 20px;
+  background-color: #8AECFE;
+  color: black;
 }
 
 .dressing-image {
